2022-03-03 Jan Kotanski <jankotan@gmail.com>
	* set endTime, description, startTime from nexus file
	* tagged as v3.15.0

2022-03-01 Jan Kotanski <jankotan@gmail.com>
	* fix auto complition for options of nxsfileinfo metadata
	* tagged as v3.14.1

2022-02-28 Jan Kotanski <jankotan@gmail.com>
	* add --beamtime-meta option for nxsfileinfo metadata
	* add --scientific-meta option for nxsfileinfo metadata
	* add --pid option for nxsfileinfo metadata
	* add --output option for nxsfileinfo metadata
	* replace --scientific by reverse of --raw-metadata for nxsfileinfo metadata
	* tagged as v3.14.0

2022-02-25 Jan Kotanski <jankotan@gmail.com>
	* fix nxsfileinfo metadata crash with h5py
	* tagged as v3.13.1

2022-02-25 Jan Kotanski <jankotan@gmail.com>
	* print all attributes by nxsfileinfo metadata as default
	* add --hidden-attributes option for nxsfileinfo metadata
	* fixes for nxsfileinfo metadata subcommand
	* tagged as v3.13.0

2022-02-16 Jan Kotanski <jankotan@gmail.com>
	* add nxsfileinfo metadata subcommand
	* tagged as v3.12.0

2021-12-20 Jan Kotanski <jankotan@gmail.com>
	* remove delay time from lambda template components
	* tagged as v3.11.0

2021-09-21 Jan Kotanski <jankotan@gmail.com>
	* fix for nxscreate compare when sardana name defined
	* tagged as v3.10.2

2021-07-29 Jan Kotanski <jankotan@gmail.com>
	* read timezone from tzlocal if pytz fails
	* tagged as v3.10.1

2021-06-29 Jan Kotanski <jankotan@gmail.com>
	* add lambda2mvds component template
	* add dalsavds component template
	* fix for datasignal pyeval when no fields in NXdata
	* fix H5CppVirtualFieldLayout calls when filename is in unicode
	* tagged as v3.10.0

2021-05-28 Jan Kotanski <jankotan@gmail.com>
	* add common.blockitem_add, common.blockitem_addint, common.blockitem_rm to pyeval
	* add cleaning in lambdavds description
	* add move lambda datasources to pyeval
	* add move pilatus datasources to pyeval
	* add move pco datasources to pyeval
	* add move pe datasources to pyeval