@@ -1,5 +1,6 @@
-2022-03-03 Jan Kotanski <jankotan@gmail.com>
+2022-03-09 Jan Kotanski <jankotan@gmail.com>
 	* set endTime, description, startTime from nexus file
+	* add --pid-with-uuid options for nxsfileinfo
 	* tagged as v3.15.0
 
 2022-03-01 Jan Kotanski <jankotan@gmail.com>
